--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,178 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>I am the title</title>
-        <link rel="stylesheet" href={{url_for('static',filename='css/main.css')}} type = "text/css" />
-        <link rel="stylesheet" href={{cdn_css | safe}} type="text/css" />
-        <script type="text/javascript" src={{cdn_js | safe}}></script>
-    </head>
-    <body>
-      <h3> I am a heading</h3>
-      {{js|safe}}
-      {{div|safe}}
-      <p> I am a paragraph </p>
-    </body>
+<!DOCTYPE HTML>
+<!--
+	Dopetrope by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Dopetrope by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href={{url_for('static',filename='css/main.css')}}/>
+	</head>
+	<body class="homepage is-preload">
+		<div id="page-wrapper">
+
+			<!-- Header -->
+				<section id="header">
+
+					<!-- Logo -->
+						<h1><a href="index.html">Netherlands in Data</a></h1>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li class="current"><a href="index.html">Home</a></li>
+								<li><a href="left-sidebar.html">Economy</a></li>
+								<li><a href="population.html">Population</a></li>
+								<li><a href="housing_market.html">Housing market</a></li>
+							</ul>
+						</nav>
+
+					<!-- Banner -->
+						<section id="banner">
+							<header>
+								<!-- <h2>Howdyho. This is Dopetrope.</h2>
+								<p>A responsive template by HTML5 UP</p>-->
+							</header>
+						</section>
+
+
+
+				</section>
+
+			<!-- Main -->
+				<section id="main">
+					<div class="container">
+						<div class="row">
+							<div class="col-12">
+
+								<!-- Portfolio -->
+									<section>
+										<header class="major">
+											<h2>All you wanted to know about the Netherlands.<br>Statistical data. Visualized.</h2>
+										</header>
+										<div class="row">
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="#" class="image featured"><img src="../static/images/Economy.jpg" alt="" /></a>
+													<header>
+														<h3>Economy</h3>
+													</header>
+													<p>The Netherlands is one of Europe's strongest economies. Find out what the country produces and who it trades to. Learn the main economic indicators. See how it compares to other countries.<br> <br> </p>
+													<footer>
+														<ul class="actions">
+															<li><a href="#" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="#" class="image featured"><img src="../static/images/Population.jpg" alt="" /></a>
+													<header>
+														<h3>Population</h3>
+													</header>
+													<p>Being the most densely populated country in Europe, the Netherlands has a population of 17.5m people. Oh those Dutch! Learn who they are. Developments in population numbers. Age, gender and background details. </p>
+													<footer>
+														<ul class="actions">
+															<li><a href="population.html" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="#" class="image featured"><img src="../static/images/Housing.jpg" alt="" /></a>
+													<header>
+														<h3>Housing market</h3>
+													</header>
+													<p>Wanna live in the Netherlands? The housing market is currently hot. Find out how much it costs and where you want to be. Housing prices developments, details per region, buying vs renting comparison.<br> <br> </p>
+													<footer>
+														<ul class="actions">
+															<li><a href="housing_market.html" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+													<header>
+														<h3>Blandit sed adipiscing</h3>
+													</header>
+													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="#" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+													<header>
+														<h3>Etiam nisl consequat</h3>
+													</header>
+													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="#" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<header>
+														<h3>Dolore nisl feugiat</h3>
+													</header>
+													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="#" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+										</div>
+									</section>
+
+							</div>
+						</div>
+					</div>
+				</section>
+
+			<!-- Footer -->
+				<section id="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-12">
+
+								<!-- Copyright -->
+									<div id="copyright">
+										<ul class="links">
+											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+										</ul>
+									</div>
+
+							</div>
+						</div>
+					</div>
+				</section>
+
+		</div>
+
+		<!-- Scripts -->
+			<!-- <script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script> -->
+
+	</body>
 </html>
